--- a/app/globals.css
+++ b/app/globals.css
@@ -119,3 +119,48 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* .grid-background {
+  background: linear-gradient(
+    45deg,
+    var(--chart-1) 25%,
+    transparent 25%
+  ),
+  linear-gradient(
+    -45deg,
+    var(--chart-1) 25%,
+    transparent 25%
+  ),
+  linear-gradient(
+    45deg,
+    transparent 75%,
+    var(--chart-1) 75%
+  ),
+  linear-gradient(
+    -45deg,
+    transparent 75%,
+    var(--chart-1) 75%
+  );
+} */
+
+.grid-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.1) 1px,
+    transparent 1px
+  ),
+  linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.1) 1px,
+    transparent 1px
+  );
+  background-size: 20px 20px;
+  pointer-events: none;
+  z-index: -1;
+}
