--- a/app/globals.css
+++ b/app/globals.css
@@ -152,7 +152,7 @@
   height: 100%;
   background: linear-gradient(
     to right,
-    rgba(255, 255, 255, 0.1) 1px,
+    rgba(179, 220, 255, 0.264) 1px,
     transparent 1px
   ),
   linear-gradient(
@@ -163,4 +163,57 @@
   background-size: 20px 20px;
   pointer-events: none;
   z-index: -1;
+}
+
+.grid-background::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle ,
+    transparent,
+    rgba(0, 0, 0, 0.9) 90%
+  );
+  
+}
+
+@layer utilities {
+  .gradient {
+    @apply bg-gradient-to-b from-gray-400 via-gray-200 to-gray-600;
+  }
+
+  .gradient-title {
+    @apply gradient font-extrabold tracking-tighter text-transparent bg-clip-text pb-2 pr-2;
+  }
+}
+
+/* .hero-image-wrapper {
+  perspective: 1000px;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease-in-out;
+}
+.hero-image:hover {
+  transform: rotateY(10deg) rotateX(10deg);
+} */
+
+.hero-image-wrapper {
+  perspective: 1000px;
+}
+.hero-image {
+  transform: rotateX(15deg) scale(1);
+  transition: transform 0.5s ease-out;
+  will-change: transform;
+}
+
+.hero-image.scrolled {
+  transform: rotateX(0deg) scale(1) translateY(40px);
 }
